[gd_scene load_steps=6 format=3 uid="uid://ct47xp74ehl30"]

[ext_resource type="Script" uid="uid://cfh31cdyrncnm" path="res://Assets/Scripts/Universal Scripts/global_audio_controller.gd" id="1_2ql4u"]
[ext_resource type="AudioStream" uid="uid://c0vahobgr2g8" path="res://Assets/Sound/Music/A desperate battle, no way back_ (Track 04).mp3" id="1_bq62r"]
[ext_resource type="AudioStream" uid="uid://yra0veoy0d5n" path="res://Assets/Sound/Music/MenuMusic.mp3" id="2_2ql4u"]
[ext_resource type="AudioStream" uid="uid://3svjvkpksu80" path="res://Assets/Sound/DeathSound.mp3" id="4_bq4xx"]
[ext_resource type="AudioStream" uid="uid://pse4j3wrpyku" path="res://Assets/Sound/ClickSound.mp3" id="5_e30su"]

[node name="GlobalAudioController" type="Node2D"]
script = ExtResource("1_2ql4u")

[node name="Music" type="CanvasLayer" parent="."]

[node name="Level1Soundtrack" type="AudioStreamPlayer2D" parent="Music"]
stream = ExtResource("1_bq62r")

[node name="PauseMenuSoundtrack" type="AudioStreamPlayer2D" parent="Music"]
process_mode = 3
stream = ExtResource("2_2ql4u")

[node name="SFX" type="CanvasLayer" parent="."]

[node name="DeathSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("4_bq4xx")

[node name="ClickSound" type="AudioStreamPlayer2D" parent="SFX"]
process_mode = 3
stream = ExtResource("5_e30su")
